# kcontext

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  QUICKSTART.md  README.md  go.mod  main.go  main_test.go  readmd.md  shell_init.go
.github/workflows/: release.yml
docker/: Dockerfile  docker-compose.yml
docs/: HOMEBREW_LOCAL_DEV.md
homebrew/: kcontext.rb
orig/: k8sconfig  k8sconfig_completion  k8scontext  k8scontext_completion
scripts/: build.sh  test-docker.sh
src/: main.rs  shell_init.rs  tests.rs
